--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             </ul>
         </nav>
     </header><section id="home" class="hero">
-    <img src="background.jpg" alt="Pesantren" class="bg-image">
+    <img src="IMG-20250319-WA0018.jpg" alt="Pesantren" class="bg-image">
     <div class="content">
-        <img src="guru.jpg" alt="Pimpinan" class="wow animate__fadeInUp guru-img">
+        <img src="1743758257734.jpg
+" alt="Pimpinan" class="wow animate__fadeInUp guru-img">
         <h1 class="wow animate__fadeIn">Selamat Datang di AT-TAUFIQ</h1>
         <p class="wow animate__fadeIn" data-wow-delay="0.5s">Jumlah Santri: 200 | Jumlah Ustadz: 15</p>
     </div>
