--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="logo.png" alt="Logo AT-TAUFIQ" class="logo">
+            <img src="IMG_20250402_185237.png" alt="Logo AT-TAUFIQ" class="logo">
             <div class="title">AT-TAUFIQ</div>
         </div>
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
