--- a/index.html
+++ b/index.html
@@ -1,14 +1,128 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AT-TAUFIQ</title>
-    <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    
+    <style>
+        /* Reset default margin & padding */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+
+        header {
+            background: #009688;
+            color: white;
+            padding: 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo-container {
+            display: flex;
+            align-items: center;
+        }
+
+        .logo {
+            width: 50px;
+            height: 50px;
+            margin-right: 10px;
+        }
+
+        .title {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .hamburger {
+            font-size: 2rem;
+            cursor: pointer;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 15px;
+        }
+
+        nav ul li {
+            display: inline;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 1rem;
+        }
+
+        .hero {
+            position: relative;
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        .bg-image {
+            width: 100%;
+            height: auto;
+        }
+
+        .content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .guru-img {
+            width: 150px;
+            height: auto;
+            border-radius: 50%;
+        }
+
+        h1 {
+            font-size: 2rem;
+            margin-top: 10px;
+        }
+
+        p {
+            font-size: 1.2rem;
+        }
+
+        /* Responsif */
+        @media (max-width: 768px) {
+            .hero {
+                height: auto;
+            }
+            .content {
+                width: 90%;
+            }
+            h1 {
+                font-size: 1.5rem;
+            }
+        }
+    </style>
 </head>
 <body>
+
     <header>
         <div class="logo-container">
             <img src="IMG_20250402_185237.png" alt="Logo AT-TAUFIQ" class="logo">
@@ -22,22 +136,23 @@
                 <li><a href="#contact">Kontak</a></li>
             </ul>
         </nav>
-    </header><section id="home" class="hero">
-    <img src="IMG-20250319-WA0018.jpg" alt="Pesantren" class="bg-image">
-    <div class="content">
-        <img src="1743758257734.jpg
-" alt="Pimpinan" class="wow animate__fadeInUp guru-img">
-        <h1 class="wow animate__fadeIn">Selamat Datang di AT-TAUFIQ</h1>
-        <p class="wow animate__fadeIn" data-wow-delay="0.5s">Jumlah Santri: 200 | Jumlah Ustadz: 15</p>
-    </div>
-</section>
+    </header>
 
-<script>
-    new WOW().init();
-    function toggleMenu() {
-        document.getElementById("menu").classList.toggle("show");
-    }
-</script>
+    <section id="home" class="hero">
+        <img src="IMG-20250319-WA0018.jpg" alt="Pesantren" class="bg-image">
+        <div class="content">
+            <img src="1743758257734.jpg" alt="Pimpinan" class="wow animate__fadeInUp guru-img">
+            <h1 class="wow animate__fadeIn">Selamat Datang di AT-TAUFIQ</h1>
+            <p class="wow animate__fadeIn" data-wow-delay="0.5s">Jumlah Santri: 200 | Jumlah Ustadz: 15</p>
+        </div>
+    </section>
+
+    <script>
+        new WOW().init();
+        function toggleMenu() {
+            document.getElementById("menu").classList.toggle("show");
+        }
+    </script>
 
 </body>
 </html>
