--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <nav id="menu">
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">Tentang</a></li>
+                <li><a href="tentang.html">Tentang</a></li>
                 <li><a href="#contact">Kontak</a></li>
             </ul>
         </nav>
