--- a/index.html
+++ b/index.html
@@ -1,158 +1,221 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AT-TAUFIQ</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    
-    <style>
-        /* Reset default margin & padding */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AT-TAUFIQ</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
 
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
+    body {
+      background-color: #f4f4f4;
+      color: #333;
+    }
 
-        header {
-            background: #009688;
-            color: white;
-            padding: 15px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+    header {
+      background-color: #0a3d62;
+      color: #fff;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
 
-        .logo-container {
-            display: flex;
-            align-items: center;
-        }
+    .logo-container {
+      display: flex;
+      align-items: center;
+    }
 
-        .logo {
-            width: 50px;
-            height: 50px;
-            margin-right: 10px;
-        }
+    .logo {
+      width: 40px;
+      height: 40px;
+      margin-right: 10px;
+    }
 
-        .title {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
+    .title {
+      font-size: 22px;
+      font-weight: bold;
+    }
 
-        .hamburger {
-            font-size: 2rem;
-            cursor: pointer;
-        }
+    .hamburger {
+      display: none;
+      font-size: 24px;
+      cursor: pointer;
+    }
 
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 15px;
-        }
+    nav ul {
+      display: flex;
+      gap: 20px;
+      list-style: none;
+    }
 
-        nav ul li {
-            display: inline;
-        }
+    nav ul li a {
+      text-decoration: none;
+      color: white;
+      font-weight: 500;
+    }
 
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-size: 1rem;
-        }
+    .hero {
+      position: relative;
+      text-align: center;
+      overflow: hidden;
+    }
 
-        .hero {
-            position: relative;
-            width: 100%;
-            height: 100vh;
-            overflow: hidden;
-        }
+    .bg-image {
+      width: 100%;
+      max-height: 500px;
+      object-fit: cover;
+      opacity: 0.7;
+    }
 
-        .bg-image {
-            width: 100%;
-            height: auto;
-        }
+    .content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+      text-align: center;
+    }
 
-        .content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: white;
-            text-align: center;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 20px;
-            border-radius: 10px;
-        }
+    .content h1 {
+      font-size: 52px;
+      font-weight: 800;
+      margin-bottom: 20px;
+    }
 
-        .guru-img {
-            width: 150px;
-            height: auto;
-            border-radius: 50%;
-        }
+    .content p {
+      font-size: 20px;
+    }
 
-        h1 {
-            font-size: 2rem;
-            margin-top: 10px;
-        }
+    .guru-img {
+      width: 350px;
+      height: auto;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
 
-        p {
-            font-size: 1.2rem;
-        }
+    /* TENTANG SECTION */
+    #tentang {
+      background-color: #111;
+      color: white;
+      padding: 80px 20px;
+      text-align: center;
+    }
 
-        /* Responsif */
-        @media (max-width: 768px) {
-            .hero {
-                height: auto;
-            }
-            .content {
-                width: 90%;
-            }
-            h1 {
-                font-size: 1.5rem;
-            }
-        }
-    </style>
+    #tentang h2 {
+      font-size: 38px;
+      margin-bottom: 30px;
+      animation: fadeInDown 1s ease-in-out;
+    }
+
+    #tentang p {
+      max-width: 700px;
+      margin: 0 auto;
+      font-size: 18px;
+      line-height: 1.6;
+      animation: fadeInUp 1.5s ease-in-out;
+    }
+
+    /* Animations */
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .content h1 {
+        font-size: 36px;
+      }
+
+      .guru-img {
+        width: 250px;
+      }
+
+      nav ul {
+        display: none;
+        flex-direction: column;
+        background-color: #0a3d62;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        padding: 10px;
+      }
+
+      nav ul.show {
+        display: flex;
+      }
+
+      .hamburger {
+        display: block;
+      }
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <div class="logo-container">
+      <img src="IMG_20250402_185237.png" alt="Logo AT-TAUFIQ" class="logo">
+      <div class="title">AT-TAUFIQ</div>
+    </div>
+    <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
+    <nav id="menu">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#tentang">Tentang</a></li>
+        <li><a href="#contact">Kontak</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <header>
-        <div class="logo-container">
-            <img src="IMG_20250402_185237.png" alt="Logo AT-TAUFIQ" class="logo">
-            <div class="title">AT-TAUFIQ</div>
-        </div>
-        <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
-        <nav id="menu">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="tentang.html">Tentang</a></li>
-                <li><a href="#contact">Kontak</a></li>
-            </ul>
-        </nav>
-    </header>
+  <section id="home" class="hero">
+    <img src="IMG-20250319-WA0018.jpg" alt="Pesantren" class="bg-image">
+    <div class="content">
+      <img src="1743758257734.jpg" alt="Pimpinan" class="guru-img">
+      <h1>Selamat Datang di AT-TAUFIQ</h1>
+      <p>Jumlah Santri: 200 | Jumlah Ustadz: 15</p>
+    </div>
+  </section>
 
-    <section id="home" class="hero">
-        <img src="IMG-20250319-WA0018.jpg" alt="Pesantren" class="bg-image">
-        <div class="content">
-            <img src="1743758257734.jpg" alt="Pimpinan" class="wow animate__fadeInUp guru-img">
-            <h1 class="wow animate__fadeIn">Selamat Datang di AT-TAUFIQ</h1>
-            <p class="wow animate__fadeIn" data-wow-delay="0.5s">Jumlah Santri: 200 | Jumlah Ustadz: 15</p>
-        </div>
-    </section>
+  <section id="tentang">
+    <h2>Tentang Kami</h2>
+    <p>
+      Pondok Pesantren AT-TAUFIQ adalah lembaga pendidikan Islam yang berfokus pada pembentukan karakter santri melalui pendekatan keilmuan dan akhlak. 
+      Didirikan untuk mencetak generasi yang sholeh, cerdas, dan berakhlakul karimah. 
+      Dengan bimbingan para ustadz berpengalaman, kami memberikan lingkungan yang kondusif untuk belajar, beribadah, dan berkarya.
+    </p>
+  </section>
 
-    <script>
-        new WOW().init();
-        function toggleMenu() {
-            document.getElementById("menu").classList.toggle("show");
-        }
-    </script>
-
+  <script>
+    function toggleMenu() {
+      document.getElementById("menu").classList.toggle("show");
+    }
+  </script>
 </body>
 </html>
