--- a/index.html
+++ b/index.html
@@ -217,5 +217,21 @@
       document.getElementById("menu").classList.toggle("show");
     }
   </script>
+  <!-- Footer -->
+  <footer style="background-color: #0a3d62; color: white; padding: 40px 20px; text-align: center;">
+    <div style="max-width: 900px; margin: auto;">
+      <h3 style="margin-bottom: 20px;">Hubungi Kami</h3>
+      <p style="margin-bottom: 10px;">Alamat: Jl. Pendidikan No.123, Desa Sejahtera, Kec. Damai, Kab. Harmoni</p>
+      <p style="margin-bottom: 10px;">Telepon: 0822-1234-5678</p>
+      <p style="margin-bottom: 20px;">Email: attaufiq.pesantren@gmail.com</p>
+      <div style="border: 2px solid white; border-radius: 8px; overflow: hidden; margin-top: 20px;">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253840.58848978618!2d106.66470010781395!3d-6.229728379312425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3e1d3d4a5b5%3A0x1039bfb8b0dfb7d!2sJakarta!5e0!3m2!1sen!2sid!4v1615212643796!5m2!1sen!2sid" 
+          width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+      </div>
+      <p style="margin-top: 20px;">&copy; 2025 Pondok Pesantren AT-TAUFIQ. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
