--- a/index.html
+++ b/index.html
@@ -59,5 +59,43 @@
         </div>
     </div>
     <div class="menu">☰</div>
+    <footer class="bg-black text-white py-10">
+  <div class="container mx-auto px-5">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div>
+        <h3 class="text-lg font-bold">PONPES AL MUBAAROK MANGGISAN</h3>
+        <p>Jl. Syekh Qoduddin, Manggisan Lama, Rt: 03 Rw: 08, Mudal, Mojotengah, Wonosobo, Jawa Tengah 56351</p>
+        <p><strong>Phone:</strong> (0286) 323659</p>
+        <p><strong>Email:</strong> ponpesmanggisan@gmail.com</p>
+        <div class="flex space-x-4 mt-3">
+          <a href="#" class="text-white"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-white"><i class="fab fa-youtube"></i></a>
+        </div>
+      </div><div>
+    <h3 class="text-lg font-bold">Jenjang Pendidikan</h3>
+    <ul>
+      <li>Induk (Manhaj Salaf)</li>
+      <li>PDF Wustha (SMP)</li>
+      <li>PDF Ulya (SMA)</li>
+      <li>Ma'had Aly Strata Satu (S1)</li>
+    </ul>
+  </div>
+  
+  <div>
+    <h3 class="text-lg font-bold">Mau Update Informasi Terbaru Dari Kami?</h3>
+    <p>Silahkan subscribe untuk berlangganan artikel, berita dan informasi terupdate dari kami.</p>
+    <div class="mt-3 flex">
+      <input type="email" placeholder="Masukkan email" class="p-2 flex-1" />
+      <button class="bg-yellow-500 text-black px-4 py-2">Subscribe</button>
+    </div>
+  </div>
+</div>
+<div class="mt-10 text-center text-gray-400">
+  &copy; Copyright <strong>Ponpes Al Mubaarok.</strong> All Rights Reserved
+</div>
+
+  </div>
+    </footer>
 </body>
 </html>
