--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ponpes Al Mubaarok</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
             margin: 0;
@@ -10,7 +12,8 @@
             background: url('background.jpg') no-repeat center center/cover;
             height: 100vh;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            justify-content: space-between;
             align-items: center;
             color: white;
             text-align: center;
@@ -27,6 +30,7 @@
         .content {
             position: relative;
             z-index: 2;
+            margin-top: 100px;
         }
         .buttons a {
             display: inline-block;
@@ -45,6 +49,69 @@
             padding: 10px;
             border-radius: 5px;
         }
+        /* Footer Styling */
+        footer {
+            background: #111;
+            color: white;
+            width: 100%;
+            padding: 40px 20px;
+            text-align: left;
+        }
+        .footer-container {
+            max-width: 1200px;
+            margin: auto;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        .footer-section {
+            flex: 1;
+            min-width: 250px;
+            margin: 10px;
+        }
+        .footer-section h3 {
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+        .footer-section p, .footer-section ul {
+            font-size: 14px;
+            line-height: 1.6;
+        }
+        .footer-section ul {
+            list-style: none;
+            padding: 0;
+        }
+        .footer-section ul li {
+            margin-bottom: 5px;
+        }
+        .footer-section input {
+            width: 80%;
+            padding: 8px;
+            margin-right: 5px;
+            border: none;
+            border-radius: 5px;
+        }
+        .footer-section button {
+            background: gold;
+            border: none;
+            padding: 8px 12px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .social-icons {
+            margin-top: 10px;
+        }
+        .social-icons a {
+            color: white;
+            margin-right: 10px;
+            font-size: 18px;
+        }
+        .copyright {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 14px;
+            color: gray;
+        }
     </style>
 </head>
 <body>
@@ -59,43 +126,41 @@
         </div>
     </div>
     <div class="menu">☰</div>
-    <footer class="bg-black text-white py-10">
-  <div class="container mx-auto px-5">
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-      <div>
-        <h3 class="text-lg font-bold">PONPES AL MUBAAROK MANGGISAN</h3>
-        <p>Jl. Syekh Qoduddin, Manggisan Lama, Rt: 03 Rw: 08, Mudal, Mojotengah, Wonosobo, Jawa Tengah 56351</p>
-        <p><strong>Phone:</strong> (0286) 323659</p>
-        <p><strong>Email:</strong> ponpesmanggisan@gmail.com</p>
-        <div class="flex space-x-4 mt-3">
-          <a href="#" class="text-white"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-white"><i class="fab fa-youtube"></i></a>
-        </div>
-      </div><div>
-    <h3 class="text-lg font-bold">Jenjang Pendidikan</h3>
-    <ul>
-      <li>Induk (Manhaj Salaf)</li>
-      <li>PDF Wustha (SMP)</li>
-      <li>PDF Ulya (SMA)</li>
-      <li>Ma'had Aly Strata Satu (S1)</li>
-    </ul>
-  </div>
-  
-  <div>
-    <h3 class="text-lg font-bold">Mau Update Informasi Terbaru Dari Kami?</h3>
-    <p>Silahkan subscribe untuk berlangganan artikel, berita dan informasi terupdate dari kami.</p>
-    <div class="mt-3 flex">
-      <input type="email" placeholder="Masukkan email" class="p-2 flex-1" />
-      <button class="bg-yellow-500 text-black px-4 py-2">Subscribe</button>
-    </div>
-  </div>
-</div>
-<div class="mt-10 text-center text-gray-400">
-  &copy; Copyright <strong>Ponpes Al Mubaarok.</strong> All Rights Reserved
-</div>
 
-  </div>
+    <!-- Footer -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>PONPES AL MUBAAROK MANGGISAN</h3>
+                <p>Jl. Syekh Qoduddin, Manggisan Lama, Rt: 03 Rw: 08, Mudal, Mojotengah, Wonosobo, Jawa Tengah 56351</p>
+                <p><strong>Phone:</strong> (0286) 323659</p>
+                <p><strong>Email:</strong> ponpesmanggisan@gmail.com</p>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>Jenjang Pendidikan</h3>
+                <ul>
+                    <li>Induk (Manhaj Salaf)</li>
+                    <li>PDF Wustha (SMP)</li>
+                    <li>PDF Ulya (SMA)</li>
+                    <li>Ma'had Aly Strata Satu (S1)</li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Mau Update Informasi Terbaru Dari Kami?</h3>
+                <p>Silahkan subscribe untuk berlangganan artikel, berita, dan informasi terbaru dari kami.</p>
+                <input type="email" placeholder="Masukkan email">
+                <button>Subscribe</button>
+            </div>
+        </div>
+        <div class="copyright">
+            &copy; Copyright <strong>Ponpes Al Mubaarok.</strong> All Rights Reserved
+        </div>
     </footer>
+
 </body>
 </html>
