--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ponpes Al Mubaarok</title>
+  <title>Ponpes At-Taufiq</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <style>
     * {
@@ -174,11 +174,11 @@
   <div class="main-content">
     <div class="overlay"></div>
     <div class="content">
-      <h1>PONPES AL MUBAAROK</h1>
-      <h3>Manggisan, Wonosobo, Jawa Tengah</h3>
+      <h1>PONPES AT-TAUFIQ</h1>
+      <h3>Bogem - Grogol - Diwek - Jombang - Jawa Timur</h3>
       <div class="buttons">
         <a href="#">PSB Online</a>
-        <a href="#">Login Santri Baru</a>
+        <a href="#">DAFTAR ONLINE</a>
         <a href="#">Login Dakwah Santri</a>
       </div>
     </div>
@@ -187,10 +187,10 @@
     <footer>
       <div class="footer-container">
         <div class="footer-section">
-          <h3>PONPES AL MUBAAROK MANGGISAN</h3>
-          <p>Jl. Syekh Qoduddin, Manggisan Lama, Rt: 03 Rw: 08, Mudal, Mojotengah, Wonosobo, Jawa Tengah 56351</p>
+          <h3>PONPES AT TAUFIQ</h3>
+          <p>Jl. KH. Shobari No.48B, Bogem, Grogol, Diwek, Jombang, Jawa Timur, Indonesia</p>
           <p><strong>Phone:</strong> (0286) 323659</p>
-          <p><strong>Email:</strong> ponpesmanggisan@gmail.com</p>
+          <p><strong>Email:</strong> attaufiqbogem@gmail.com</p>
           <div class="social-icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
@@ -198,13 +198,13 @@
           </div>
         </div>
         <div class="footer-section">
-          <h3>Jenjang Pendidikan</h3>
+          <h3>JENJANG PENDIDIKAN</h3>
           <ul>
-            <li>Induk (Manhaj Salaf)</li>
-            <li>PDF Wustha (SMP)</li>
-            <li>PDF Ulya (SMA)</li>
-            <li>Ma'had Aly Strata Satu (S1)</li>
-          </ul>
+            <li>Manhaj Salaf</li>
+            <li>Madrasah Ibtidaiyah</li>
+            <li>Madrasah Tsanawiyah</li>
+            <li>Madrasah Aliyah</li>
+             </ul>
         </div>
         <div class="footer-section">
           <h3>Mau Update Informasi Terbaru Dari Kami?</h3>
@@ -214,7 +214,7 @@
         </div>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong>Ponpes Al Mubaarok.</strong> All Rights Reserved
+        &copy; Copyright <strong>Ponpes At Taufiq.</strong> All Rights Reserved
       </div>
     </footer>
   </div>
