--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     /* Konten Utama */
     .main-content {
       display: none;
-      background: url('background.jpg') no-repeat center center/cover;
+      background: url('background.png') no-repeat center center/cover;
       height: 100vh;
       color: white;
       text-align: center;
