--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ponpes At-Taufiq</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <style>
@@ -13,183 +12,138 @@
     }
     body {
       font-family: Arial, sans-serif;
-    }
+    }/* PRELOADER */
+.preloader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 0.5s ease-out;
+}
 
-    /* PRELOADER */
-    .preloader {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-      transition: opacity 0.5s ease-out;
-    }
+.spinner {
+  border: 6px solid #ccc;
+  border-top: 6px solid gold;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
 
-    .spinner {
-      border: 8px solid #ccc;
-      border-top: 8px solid gold;
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      animation: spin 1s linear infinite;
-    }
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
+/* Konten Utama */
+.main-content {
+  display: none;
+  background: url('https://source.unsplash.com/random/1920x1080') no-repeat center center/cover;
+  height: 100vh;
+  color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 20px;
+}
 
-    /* Konten Utama */
-    .main-content {
-      display: none;
-      background: url('https://source.unsplash.com/random/1920x1080') no-repeat center center/cover;
-      height: 100vh;
-      color: white;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      position: relative;
-    }
+.overlay {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
 
-    .overlay {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      z-index: 1;
-    }
+.content {
+  position: relative;
+  z-index: 2;
+  max-width: 800px;
+}
 
-    .content {
-      position: relative;
-      z-index: 2;
-      margin-top: 100px;
-    }
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  flex-wrap: wrap;
+  margin-top: 15px;
+}
 
-    .buttons a {
-      display: inline-block;
-      margin: 10px;
-      padding: 10px 20px;
-      background: gold;
-      color: black;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
+.buttons a {
+  padding: 12px 20px;
+  background: gold;
+  color: black;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: 0.3s;
+}
 
-    .buttons a:hover {
-      background: darkgoldenrod;
-    }
+.buttons a:hover {
+  background: darkgoldenrod;
+}
 
-    /* Menu */
-    .menu {
-      position: absolute;
-      top: 20px; right: 20px;
-      background: rgba(255, 255, 255, 0.3);
-      padding: 10px;
-      border-radius: 5px;
-      cursor: pointer;
-      z-index: 3;
-    }
+/* Footer */
+footer {
+  background: #111;
+  color: white;
+  padding: 40px 20px;
+  text-align: center;
+}
 
-    /* Footer */
-    footer {
-      background: #111;
-      color: white;
-      width: 100%;
-      padding: 40px 20px 20px;
-    }
+.footer-container {
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
-    .footer-container {
-      max-width: 1200px;
-      margin: auto;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-    }
+.footer-section {
+  flex: 1;
+  min-width: 250px;
+  padding: 15px;
+}
 
-    .footer-section {
-      flex: 1;
-      min-width: 250px;
-      padding: 15px;
-    }
+.footer-section h3 {
+  margin-bottom: 10px;
+}
 
-    .footer-section h3 {
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
+.social-icons {
+  margin-top: 10px;
+}
 
-    .footer-section p,
-    .footer-section ul {
-      font-size: 14px;
-      line-height: 1.6;
-    }
+.social-icons a {
+  color: white;
+  margin-right: 10px;
+  font-size: 18px;
+}
 
-    .footer-section ul {
-      list-style: none;
-      padding: 0;
-    }
+.copyright {
+  margin-top: 20px;
+  font-size: 14px;
+  color: gray;
+}
 
-    .footer-section ul li {
-      margin-bottom: 5px;
-    }
+/* Responsiveness */
+@media (max-width: 768px) {
+  .footer-container {
+    flex-direction: column;
+    text-align: center;
+  }
+}
 
-    .footer-section input {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: none;
-      border-radius: 5px;
-    }
-
-    .footer-section button {
-      background: gold;
-      border: none;
-      padding: 10px 12px;
-      cursor: pointer;
-      border-radius: 5px;
-      margin-top: 5px;
-      width: 100%;
-    }
-
-    .social-icons {
-      margin-top: 10px;
-    }
-
-    .social-icons a {
-      color: white;
-      margin-right: 10px;
-      font-size: 18px;
-    }
-
-    .copyright {
-      text-align: center;
-      font-size: 14px;
-      color: gray;
-      padding-top: 20px;
-    }
-
-    /* Responsiveness */
-    @media (max-width: 768px) {
-      .footer-container {
-        flex-direction: column;
-        text-align: center;
-      }
-    }
   </style>
 </head>
-<body>
-
-  <!-- PRELOADER -->
-  <div class="preloader">
+<body>  <!-- PRELOADER -->  <div class="preloader">
     <div class="spinner"></div>
-  </div>
-
-  <!-- KONTEN UTAMA -->
-  <div class="main-content">
+  </div>  <!-- KONTEN UTAMA -->  <div class="main-content">
     <div class="overlay"></div>
     <div class="content">
       <h1>PONPES AT-TAUFIQ</h1>
@@ -200,44 +154,31 @@
         <a href="#">Login Dakwah Santri</a>
       </div>
     </div>
-    <div class="menu" onclick="toggleMenu()">☰</div>
-
-    <footer>
-      <div class="footer-container">
-        <div class="footer-section">
-          <h3>PONPES AT TAUFIQ</h3>
-          <p>Jl. KH. Shobari No.48B, Bogem, Grogol, Diwek, Jombang, Jawa Timur, Indonesia</p>
-          <p><strong>Phone:</strong> (0286) 323659</p>
-          <p><strong>Email:</strong> attaufiqbogem@gmail.com</p>
-          <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-          </div>
-        </div>
-        <div class="footer-section">
-          <h3>JENJANG PENDIDIKAN</h3>
-          <ul>
-            <li>Manhaj Salaf</li>
-            <li>Madrasah Ibtidaiyah</li>
-            <li>Madrasah Tsanawiyah</li>
-            <li>Madrasah Aliyah</li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h3>Berlangganan Informasi</h3>
-          <p>Masukkan email Anda untuk mendapatkan berita terbaru.</p>
-          <input type="email" placeholder="Masukkan email" />
-          <button>Subscribe</button>
+  </div>  <footer>
+    <div class="footer-container">
+      <div class="footer-section">
+        <h3>PONPES AT TAUFIQ</h3>
+        <p>Jl. KH. Shobari No.48B, Bogem, Grogol, Diwek, Jombang, Jawa Timur, Indonesia</p>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
-      <div class="copyright">
-        &copy; 2024 Ponpes At Taufiq. All Rights Reserved
+      <div class="footer-section">
+        <h3>JENJANG PENDIDIKAN</h3>
+        <ul>
+          <li>Manhaj Salaf</li>
+          <li>Madrasah Ibtidaiyah</li>
+          <li>Madrasah Tsanawiyah</li>
+          <li>Madrasah Aliyah</li>
+        </ul>
       </div>
-    </footer>
-  </div>
-
-  <script>
+    </div>
+    <div class="copyright">
+      &copy; 2024 Ponpes At Taufiq. All Rights Reserved
+    </div>
+  </footer>  <script>
     // Preloader
     window.addEventListener("load", function () {
       setTimeout(() => {
@@ -246,13 +187,7 @@
           document.querySelector(".preloader").style.display = "none";
           document.querySelector(".main-content").style.display = "flex";
         }, 500);
-      }, 3000);
+      }, 2000);
     });
-
-    // Menu Klik
-    function toggleMenu() {
-      alert("Menu akan muncul di sini!");
-    }
-  </script>
-</body>
+  </script></body>
 </html>
