--- a/index.html
+++ b/index.html
@@ -12,182 +12,52 @@
     }
     body {
       font-family: Arial, sans-serif;
-    }/* PRELOADER */
-.preloader {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-  transition: opacity 0.5s ease-out;
-}
-
-.spinner {
-  border: 6px solid #ccc;
-  border-top: 6px solid gold;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-/* Konten Utama */
-.main-content {
-  display: none;
-  background: url('https://source.unsplash.com/random/1920x1080') no-repeat center center/cover;
-  height: 100vh;
-  color: white;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 20px;
-}
-
-.overlay {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-}
-
-.content {
-  position: relative;
-  z-index: 2;
-  max-width: 800px;
-}
-
-.buttons {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-  flex-wrap: wrap;
-  margin-top: 15px;
-}
-
-.buttons a {
-  padding: 12px 20px;
-  background: gold;
-  color: black;
-  text-decoration: none;
-  border-radius: 5px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.buttons a:hover {
-  background: darkgoldenrod;
-}
-
-/* Footer */
-footer {
-  background: #111;
-  color: white;
-  padding: 40px 20px;
-  text-align: center;
-}
-
-.footer-container {
-  max-width: 1200px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.footer-section {
-  flex: 1;
-  min-width: 250px;
-  padding: 15px;
-}
-
-.footer-section h3 {
-  margin-bottom: 10px;
-}
-
-.social-icons {
-  margin-top: 10px;
-}
-
-.social-icons a {
-  color: white;
-  margin-right: 10px;
-  font-size: 18px;
-}
-
-.copyright {
-  margin-top: 20px;
-  font-size: 14px;
-  color: gray;
-}
-
-/* Responsiveness */
-@media (max-width: 768px) {
-  .footer-container {
-    flex-direction: column;
-    text-align: center;
-  }
-}
-
+    }
+    /* Animasi melompat untuk AT-TAUFIQ */
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+    .jump-text span {
+      display: inline-block;
+      animation: bounce 0.6s infinite alternate;
+    }
+    .jump-text span:nth-child(1) { animation-delay: 0s; }
+    .jump-text span:nth-child(2) { animation-delay: 0.1s; }
+    .jump-text span:nth-child(3) { animation-delay: 0.2s; }
+    .jump-text span:nth-child(4) { animation-delay: 0.3s; }
+    .jump-text span:nth-child(5) { animation-delay: 0.4s; }
+    .jump-text span:nth-child(6) { animation-delay: 0.5s; }
+    .jump-text span:nth-child(7) { animation-delay: 0.6s; }
+    .jump-text span:nth-child(8) { animation-delay: 0.7s; }
+    /* Tombol */
+    .buttons a[href*="PSB Online"] {
+      background: gold;
+      color: black;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      padding: 12px 20px;
+      transition: 0.3s;
+    }
+    .buttons a[href*="PSB Online"]:hover {
+      background: darkgoldenrod;
+    }
   </style>
 </head>
-<body>  <!-- PRELOADER -->  <div class="preloader">
-    <div class="spinner"></div>
-  </div>  <!-- KONTEN UTAMA -->  <div class="main-content">
-    <div class="overlay"></div>
+<body>
+  <div class="main-content">
     <div class="content">
-      <h1>PONPES AT-TAUFIQ</h1>
+      <h1 class="jump-text">
+        <span>A</span><span>T</span><span>-</span><span>T</span><span>A</span><span>U</span><span>F</span><span>IQ</span>
+      </h1>
       <h3>Bogem - Grogol - Diwek - Jombang - Jawa Timur</h3>
       <div class="buttons">
-        <a href="#">PSB Online</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzSEfwcwN__3z9TJOcHfaig2iS4F-nwFxlwk6ZomKwhBpxCw/viewform?pli=1">PSB Online</a>
         <a href="#">DAFTAR ONLINE</a>
         <a href="#">Login Dakwah Santri</a>
       </div>
     </div>
-  </div>  <footer>
-    <div class="footer-container">
-      <div class="footer-section">
-        <h3>PONPES AT TAUFIQ</h3>
-        <p>Jl. KH. Shobari No.48B, Bogem, Grogol, Diwek, Jombang, Jawa Timur, Indonesia</p>
-        <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-        </div>
-      </div>
-      <div class="footer-section">
-        <h3>JENJANG PENDIDIKAN</h3>
-        <ul>
-          <li>Manhaj Salaf</li>
-          <li>Madrasah Ibtidaiyah</li>
-          <li>Madrasah Tsanawiyah</li>
-          <li>Madrasah Aliyah</li>
-        </ul>
-      </div>
-    </div>
-    <div class="copyright">
-      &copy; 2024 Ponpes At Taufiq. All Rights Reserved
-    </div>
-  </footer>  <script>
-    // Preloader
-    window.addEventListener("load", function () {
-      setTimeout(() => {
-        document.querySelector(".preloader").style.opacity = "0";
-        setTimeout(() => {
-          document.querySelector(".preloader").style.display = "none";
-          document.querySelector(".main-content").style.display = "flex";
-        }, 500);
-      }, 2000);
-    });
-  </script></body>
+  </div>
+</body>
 </html>
