--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <!-- HEADER -->
   <header class="header">
     <div class="logo">
-      <img src="logo.png" alt="Ponpes At-Taufiq">
+      <img src="IMG_20250402_185237.png" alt="AT-TAUFIQ">
     </div>
     <div class="menu-icon" onclick="toggleMenu()">
       <i class="fas fa-bars"></i>
