--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 
   <!-- KONTEN UTAMA -->
   <div class="main-content">
-    <h1>Ponpes At-Taufiq</h1>
-    <h3>Bogem - Grogol - Diwek - Jombang - Jawa Timur</h3>
+    <h1>AT-TAUFIQ</h1>
+    <h3>Bogem Grogol Diwek Jombang</h3>
     <div class="buttons">
       <a href="#">PSB Online</a>
     </div>
@@ -165,7 +165,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>&copy; 2025 Pondok Pesantren At-Taufiq. Semua Hak Dilindungi.</p>
+    <p>&copy; 2025 Pondok Pesantren At-Taufiq.</p>
   </footer>
 
   <script>
