--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <ul>
       <li><a href="#">Beranda</a></li>
       <li><a href="#">Biaya Pendaftaran</a></li>
-      <li><a href="#">Syarat Pendaftaran</a></li>
+      <li><a href="syarat.html">Syarat Pendaftaran</a></li>
     </ul>
   </nav>
   <div class="main-content">
